# noise-display

./: Cargo.toml
src/: cli.rs  color.rs  extract_frames.rs  flatten_into_vec_u32.rs  into_binary.rs  main.rs
src/binarization_strategy/: basic.rs  mod.rs
src/cli/: mod.rs
src/display/: mod.rs
src/image_source/: basic_image_source.rs  dir_image_source.rs  error.rs  error_codes.rs  image_source_factory.rs  indexed_image.rs  jpg_source.rs  mod.rs  mp4_source.rs  single_image_source.rs
src/image_source/image_source_factory/: error_codes.rs  mod.rs
src/image_source/jpg_source/: error.rs  mod.rs
src/image_source/mock_source/: mod.rs
src/image_source/mp4_source/: error.rs  error_codes.rs  memory_preloaded.rs  mod.rs  streamed.rs
src/image_source/mp4_source/memory_preloaded/: mod.rs
src/image_source/mp4_source/streamed/: error_codes.rs  mod.rs
src/image_source/mp4_source_buffered/: mod.rs
src/noise_display/: error_codes.rs  interface.rs  mod.rs
src/noise_strategy/: black_white.rs  color.rs  mod.rs  rainbow.rs  slide.rs
src/randomisation_strategy/: black_white.rs  mod.rs  noise.rs  rainbow.rs  slide.rs
src/screen_buffer/: mod.rs
