[package]
name = "moving-noise-image"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
image = "0.25.9"
minifb = "0.28.0"
rand = "0.10.0"
rayon = "1.11.0"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
uuid = { version = "1.23.1", features = ["v4"] }
